--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.4",
     "JSONStream": "^1.3.5",
     "node-cache": "^5.1.2",
     "pg": "^8.11.3",
